Ajustando o lombok e o mapstruct